--- a/styles/blocks/_projects.scss
+++ b/styles/blocks/_projects.scss
@@ -73,6 +73,6 @@
 		gap: 1%;
 		scroll-snap-type: x mandatory;
 		overflow-x: visible;
-		margin-left: 0; // смещение слайдов по горизонтали
+		margin-left: 0px; // смещение слайдов по горизонтали
 	}
 }
